Fixing dark mode external link display
- Only apply %external-link in a:after

--- a/assets/stylesheets/components/_sidebar.scss
+++ b/assets/stylesheets/components/_sidebar.scss
@@ -362,8 +362,10 @@
   padding: .75rem 0;
   font-size: .8125rem;
   text-align: center;
-  @extend %external-link;
 
-  &:after { visibility: hidden; }
+  &:after {
+    @extend %external-link;
+    visibility: hidden;
+  }
   &:hover:after { visibility: visible; }
 }
